# knn_pca_metnum_tp2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  tp2_metodos.cbp
data/: CMakeLists.txt  Makefile  correrExp.cpp  kfold_exp.cpp  kfold_exp.h  knn_cuantitative.cpp  knn_cuantitative.h  pca_cuantitative.cpp  pca_cuantitative.h  pca_knn_cuantitative.cpp  pca_knn_cuantitative.h  power_method_cuantitative.cpp  power_method_cuantitative.h
data/notebooks/: Untitled.ipynb  Visualizacion 2d.ipynb  analisis_de_dataset.ipynb  itemize_and_cuantify.ipynb  knn_pca.ipynb  temporales.ipynb
data/results/: kfold_knn_1.csv  knn_cuali_cuanti_experiment_results_n_10001.csv  knn_cuali_cuanti_experiment_results_n_1001.csv  knn_cuali_cuanti_experiment_results_n_12501.csv  knn_cuali_cuanti_experiment_results_n_18751.csv  knn_cuali_cuanti_experiment_results_n_2001.csv  knn_cuali_cuanti_experiment_results_n_5001.csv  (+16 more)
imdb/: garompa
informe/: Untitled.ipynb  conclusion.tex  crearpdf.sh  desarrollo.tex  informe.aux  informe.out  informe.tex  informe.toc  intro.tex  resultados.tex
src/: Dataset.cpp  Dataset.h  Dataset_tester.cpp  Dataset_tester.h  Matrix.cpp  Matrix.h  Matrix.hpp  Metrics.cpp  Metrics.h  Pca.cpp  Pca.h  Svd.cpp  Svd.hpp  empty_file.cpp  kNN.cpp  kNN.h  kNN.hpp  ppmloader.cpp  ppmloader.h  reader.cpp  reader.h  utils.h  vector_builder.cpp  vector_builder.h
test/: CMakeCache.txt  CMakeLists.txt  Dataset_test.cpp  Makefile  Matrix_test.cpp  Pca_test.cpp  cmake_install.cmake  correrTests  kNN_test.cpp  svd_test.cpp
(+139 files in other folders)
